--- a/app/cli/package.json
+++ b/app/cli/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@holaplex/graph-program": "file:../../sdk/",
-    "@project-serum/anchor": "^0.24.2",
+    "@j0nnyboi/anchor": "^0.24.2",
     "commander": "^9.0.0",
     "lodash": "^4.17.21",
     "winston": "^3.7.2"
@@ -39,8 +39,8 @@
   },
   "homepage": "https://github.com/holaplex/graph-program#readme",
   "keywords": [
-    "solana",
-    "holaplex",
+    "safecoin",
+    "ledamint",
     "graph",
     "follower",
     "like"
