--- a/sdk/package.json
+++ b/sdk/package.json
@@ -19,7 +19,7 @@
     "prepublish": "yarn build"
   },
   "dependencies": {
-    "@project-serum/anchor": "^0.24.2"
+    "@j0nnyboi/anchor": "^0.24.2"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
@@ -31,8 +31,8 @@
   },
   "homepage": "https://github.com/holaplex/graph-program#readme",
   "keywords": [
-    "solana",
-    "holaplex",
+    "safecoin",
+    "ledamint",
     "graph",
     "follower",
     "like"
